mcs-demo/master-engine/destinationrule-app.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-app-engine
  namespace: mcs-demo
spec:
  host: hello-app-engine.mcs-demo.global
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
    localityLbSetting:
      enabled: true
      distribute:
      - from: us-central1/*
        to:
          "us-east1/*": 100
